--- a/top-right.html
+++ b/top-right.html
@@ -82,9 +82,9 @@
     
     <script>
         //***edit this only for your information***
-        const player = "M. HIGHTOWER";
-        const agency = "LOS SANTOS POLICE DEPARTMENT";
-        const callsign = "[272]";
+        const player = "B. Gambino";
+        const agency = "State Police";
+        const callsign = "[46]";
         //***        end edit this only         ***
     
         var d,h,m,s,animate;
